# abundantis

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: error.rs  lib.rs  path_cache.rs  selection.rs  watch_manager.rs
src/config/: mod.rs  types.rs
src/core/: mod.rs
src/events/: mod.rs
src/resolution/: mod.rs
src/source/: config.rs  file.rs  file_manager.rs  memory.rs  mod.rs  registry.rs  shell.rs  traits.rs  variable.rs
src/source/remote/: adapter.rs  discovery.rs  external.rs  factory.rs  manager.rs  mod.rs  protocol.rs  traits.rs  transport.rs
src/source/remote/providers/: doppler.rs  mod.rs
src/watch/: mod.rs
src/workspace/: context.rs  manager.rs  mod.rs
src/workspace/provider/: cargo.rs  custom.rs  lerna.rs  mod.rs  npm.rs  nx.rs  pnpm.rs  registry.rs  turbo.rs
tests/: config_tests.rs  e2e_integration_tests.rs  error_tests.rs  integration_tests.rs  memory_source_tests.rs  mod.rs  source_traits_tests.rs  workspace_tests.rs
