[package]
name = "abundantis"
version = "0.1.9"
edition = "2021"
description = "High-performance unified environment variable management from multiple sources"
license = "MIT"
repository = "https://github.com/ph1losof/abundantis"
keywords = ["env", "dotenv", "secrets", "configuration", "workspace"]
categories = ["config", "development-tools"]
rust-version = "1.75"

[features]
default = ["file", "shell"]

# Source types
file = []
shell = []

# Capabilities
watch = ["dep:notify", "dep:notify-debouncer-mini", "async"]
async = ["dep:tokio", "dep:async-trait", "dep:futures", "germi/async"]

# Full features
full = ["file", "shell", "watch", "async"]

[dependencies]
# Workspace crates
korni = "0.1.4"
germi = "0.2.2"

# Performance-critical
memchr = "2.7"
hashbrown = { version = "0.15", features = ["inline-more"] }
parking_lot = "0.12"
smallvec = { version = "1.13", features = ["union"] }
compact_str = { version = "0.8", features = ["serde"] }
dashmap = "6"
lru = "0.12"
indexmap = "2.6"
bitflags = "2.6"

# Config parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
humantime-serde = "1.1"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Filesystem & glob
globset = "0.4"
glob = "0.3"
walkdir = "2.5"
regex = "1.11"

# Optional: File watching
notify = { version = "7.0", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

# Optional: Async runtime
tokio = { version = "1.0", features = ["fs", "sync", "rt", "time"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# Async/sync code generation
maybe-async = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
